syntax = "proto3";

import "ai/lzy/v1/auth.proto";
import "ai/lzy/v1/backoffice.proto";
import "ai/lzy/v1/zygote.proto";
import "google/protobuf/timestamp.proto";

package ai.lzy.v1.oldwb;

option java_outer_classname = "LzyWhiteboard";
option java_package = "ai.lzy.v1";

service SnapshotApi {
  rpc CreateSnapshot (CreateSnapshotCommand) returns (Snapshot);
  rpc PrepareToSave (PrepareCommand) returns (OperationStatus);
  rpc Commit (CommitCommand) returns (OperationStatus);
  rpc Abort (AbortCommand) returns (OperationStatus);
  rpc FinalizeSnapshot (FinalizeSnapshotCommand) returns (OperationStatus);
  rpc LastSnapshot (LastSnapshotCommand) returns (Snapshot);
  rpc EntryStatus (EntryStatusCommand) returns (EntryStatusResponse);
  rpc CreateEntry (CreateEntryCommand) returns (OperationStatus);
  rpc SaveExecution (SaveExecutionCommand) returns (SaveExecutionResponse);
  rpc ResolveExecution (ResolveExecutionCommand) returns (ResolveExecutionResponse);
}

service WbApi {
  rpc CreateWhiteboard (CreateWhiteboardCommand) returns (Whiteboard);
  rpc Link (LinkCommand) returns (OperationStatus);
  rpc GetWhiteboard (GetWhiteboardCommand) returns (Whiteboard);
  rpc WhiteboardsList (WhiteboardsListCommand) returns (WhiteboardsResponse);
}

message CreateSnapshotCommand {
  Auth auth = 1;
  google.protobuf.Timestamp creationDateUTC = 2;
  string workflowName = 3;
  string fromSnapshot = 4;
}

message FinalizeSnapshotCommand {
  Auth auth = 1;
  string snapshotId = 2;
}

message CreateWhiteboardCommand {
  Auth auth = 1;
  string snapshotId = 2;
  repeated string fieldNames = 3;
  repeated string tags = 4;
  string namespace = 5;
  google.protobuf.Timestamp creationDateUTC = 6;
}

message Snapshot {
  string snapshotId = 1;
  //TODO: enrich me
}

message SnapshotEntry {
  string entryId = 1;
  string storageUri = 2;
  repeated string dependentEntryIds = 3;
  DataScheme type = 4;
}

message PrepareCommand {
  Auth auth = 1;
  string snapshotId = 2;
  SnapshotEntry entry = 3;
}

message CommitCommand {
  Auth auth = 1;
  string snapshotId = 2;
  string entryId = 3;
  bool empty = 4;
}

message AbortCommand {
  Auth auth = 1;
  string snapshotId = 2;
  string entryId = 3;
}

message LinkCommand {
  Auth auth = 1;
  string whiteboardId = 2;
  string fieldName = 3;
  string entryId = 4;
}

message GetWhiteboardCommand {
  Auth auth = 1;
  string whiteboardId = 2;
}

message OperationStatus {
  Status status = 1;
  string errorMessage = 2;

  enum Status {
    OK = 0;
    FAILED = 1;
  }
}

message WhiteboardField {
  string fieldName = 1;
  string storageUri = 2;
  repeated string dependentFieldNames = 3;
  bool empty = 4;
  Status status = 5;
  DataScheme scheme = 6;

  enum Status {
    UNKNOWN = 0;
    CREATED = 1;
    IN_PROGRESS = 2;
    FINISHED = 3;
    ERRORED = 4;
  }
}

enum WhiteboardStatus {
  UNKNOWN = 0;
  CREATED = 1;
  COMPLETED = 2;
  NOT_COMPLETED = 3;
  ERRORED = 4;
}

message Whiteboard {
  string id = 1;
  repeated WhiteboardField fields = 2;
  Snapshot snapshot = 3;
  WhiteboardStatus status = 4;
  repeated string tags = 5;
  string namespace = 6;
}

message BackofficeCredentials {
  UserCredentials backofficeCredentials = 1;
  BackofficeUserCredentials credentials = 2;
}

message WhiteboardsListCommand {
  Auth auth = 1;
  string namespace = 2;
  repeated string tags = 3;
  google.protobuf.Timestamp fromDateUTC = 4;
  google.protobuf.Timestamp toDateUTC = 5;
}

message WhiteboardsResponse {
  repeated Whiteboard whiteboards = 1;
}

message LastSnapshotCommand {
  Auth auth = 1;
  string workflowName = 2;
}

message EntryStatusCommand {
  Auth auth = 1;
  string entryId = 2;
  string snapshotId = 3;
}

message EntryStatusResponse {
  string entryId = 1;
  string snapshotId = 2;
  string storageUri = 3;
  bool empty = 4;
  Status status = 5;

  enum Status {
    UNKNOWN = 0;
    CREATED = 1;
    IN_PROGRESS = 2;
    FINISHED = 3;
    ERRORED = 4;
  }
}

message CreateEntryCommand {
  Auth auth = 1;
  string entryId = 2;
  string snapshotId = 3;
}

message InputArgDescription {
  string name = 1;
  string hash = 2;
  string entryId = 3;
}

message OutputArgDescription {
  string name = 1;
  string entryId = 2;
}

message ExecutionDescription {
  string name = 1;
  string snapshotId = 2;
  repeated InputArgDescription input = 3;
  repeated OutputArgDescription output = 4;
}

message SaveExecutionCommand {
  Auth auth = 1;
  ExecutionDescription description = 2;
}

message SaveExecutionResponse {
}

message ResolveExecutionCommand {
  Auth auth = 1;
  string snapshotId = 2;
  string operationName = 3;
  repeated ArgDescription args = 4;

  message ArgDescription {
    string name = 1;
    oneof info {
      string hash = 2;
      string entryId = 3;
    }
  }
}

message ResolveExecutionResponse {
  repeated ExecutionDescription execution = 1;
}
